# cpr-backend/routes/userRoute.js
@@ -1,4 +1,4 @@
-// routes/userRoutes.js
+// routes/userRoute.js
 const express = require('express');
 const {User} = require('../src/schema/cprSchema');
 const userRouter = express.Router();
@@ -6,14 +6,47 @@ const userRouter = express.Router();
 // Get all users (GET request)
 /**
  * @swagger
+ * /api/user/all:
+ */
+userRouter.get('/api/user/all', async (req, res) => {
+  try {
+    const users = await User.find(); // Find all users
+    return res.status(200).json(users);
+  } catch (error) {
+    return res.status(500).json({ message: error.message });
+  }
+});
+
+//Get all users with searchTerm and Paging (GET request)
+/**
+ * @swagger
  * /api/user:
  */
 userRouter.get('/api/user', async (req, res) => {
   try {
-    const users = await User.find(); // Find all users
-    res.status(200).json(users);
+    const searchTerm = req.query.searchTerm || ""; //Default search term is empty
+    const page = parseInt(req.query.page) || 1; //Default page is 1
+    const limit = parseInt(req.query.limit) || 5; //Default limit is 5 per page
+    const skip = (page - 1) * limit; //Calculate skip
+
+    const regex = new RegExp(searchTerm, 'i'); //Create a case-insensitive regex
+    const users = await User.find({ username: { $regex: regex }}).limit(limit).skip(skip); //Find users by name with limit and skip
+    if (!users) {
+      return res.status(404).json({ message: 'User not found' });
+    }
+
+    //Count total
+    const totalUsers = await User.countDocuments({ username: { $regex: regex }}); //Count total users
+    const totalPages = Math.ceil(totalUsers / limit); //Calculate total pages
+    return res.status(200).json({ 
+      totalUsers: totalUsers,
+      Size: limit,
+      currentPage: page,
+      totalPages: totalPages,
+      data: users
+    });
   } catch (error) {
-    res.status(500).json({ message: error.message });
+    return res.status(500).json({ message: error.message });
   }
 });
 
@@ -30,13 +63,13 @@ userRouter.get('/api/user/:username', async (req, res) => {
     if (!user) {
       return res.status(404).json({ message: 'User not found' });
     }
-    res.status(200).json(user);
+    return res.status(200).json(user);
   } catch (error) {
-    res.status(500).json({ message: error.message });
+    return res.status(500).json({ message: error.message });
   }
 });
 
-// create a user (POST request)
+// Create a user (POST request)
 /**
  * @swagger
  * /api/user:
@@ -50,13 +83,13 @@ userRouter.post('/api/user', async (req, res) => {
   });
   try {
     await user.save();
-    res.status(201).json(user);
+    return res.status(201).json(user);
   } catch (error) {
-    res.status(400).json({ message: error.message });
+    return res.status(400).json({ message: error.message });
   }
 });
 
-// update a user by name (PUT request)
+// Update a user by name (PUT request)
 /**
  * @swagger
  * /api/user/{username}:
@@ -75,13 +108,13 @@ userRouter.put('/api/user/:username', async (req, res) => {
     user.address = req.body.address;
     user.status = req.body.status;
     await user.save();
-    res.status(200).json(user);
+    return res.status(200).json(user);
   } catch (error) {
-    res.status(500).json({ message: error.message });
+    return res.status(500).json({ message: error.message });
   }
 });
 
-// delete a user by name (DELETE request)
+// Delete a user by name (DELETE request)
 /**
  * @swagger
  * /api/user/{username}:
@@ -95,9 +128,9 @@ userRouter.delete('/api/user/:username', async (req, res) => {
       return res.status(404).json({ message: 'User not found' });
     }
     await User.deleteOne({ username: { $regex: regex }}); //Delete user by name
-    res.status(200).json({ message: 'User deleted' });
+    return res.status(200).json({ message: 'User deleted' });
   } catch (error) {
-    res.status(500).json({ message: error.message });
+    return res.status(500).json({ message: error.message });
   }
 });
 
