# cpr-backend/src/swagger/swagger.yaml
@@ -17,6 +17,24 @@ tags:
   - name: Category
     description: API related for category
 paths:
+  /api/item/all:
+    get:
+      tags:
+        - Item
+      summary: Get all Items
+      description: Returns a list of items
+      operationId: getAllItems
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Item"
+        "400":
+          description: Invalid ID supplied
+        "404":
+          description: Item not found
   /api/item:
     post:
       tags:
@@ -48,12 +66,13 @@ paths:
                   example: ""
                 description:
                   type: string
-                  example: "Mô tả món ăn"
+                  example: Khoai tây chiên ngoài giòn trong mềm
                 price:
                   type: integer
+                  default: 0
         required: true
       responses:
-        "200":
+        "201":
           description: Create item success
           content:
             application/json:
@@ -66,9 +85,30 @@ paths:
     get:
       tags:
         - Item
-      summary: Get all Items
+      summary: Get all Items with searchTerm and paging
       description: Returns a list of items
-      operationId: getAllItems
+      operationId: getAllItemsWithPaging
+      parameters:
+        - name: searchTerm
+          in: query
+          description: The search term for items
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: The page number for items
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: The limit number for items
+          required: false
+          schema:
+            type: integer
+            default: 5
       responses:
         "200":
           description: successful operation
@@ -161,12 +201,30 @@ paths:
           description: Invalid ID supplied
         "404":
           description: Item not found
+  /api/user/all:
+    get:
+      tags:
+        - User
+      summary: Get all users
+      description: Return a list of users
+      operationId: getAllUsers
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: Invalid username supplied
+        "404":
+          description: User not found
   /api/user:
     post:
       tags:
         - User
       summary: Create user
-      description: This can only be done by the logged in user.
+      description: Create a new user
       operationId: createUser
       requestBody:
         description: Created user object
@@ -182,7 +240,7 @@ paths:
               properties:
                 username:
                   type: string
-                  example: "Tiến Tài"
+                  example: Tiến Tài
                 email:
                   type: string
                   example: tientai@example.com
@@ -191,10 +249,10 @@ paths:
                   example: ""
                 phoneNumber:
                   type: string
-                  example: "12345"
+                  example: 0907778777
                 address:
                   type: string
-                  example: "Thành phố HCM"
+                  example: Thành phố HCM
       responses:
         "201":
           description: Create user success
@@ -202,12 +260,37 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
     get:
       tags:
         - User
-      summary: Get all users
+      summary: Get all users with searchTerm and paging
       description: Return a list of users
-      operationId: getAllUsers
+      operationId: getAllUsersWithPaging
+      parameters:
+        - name: searchTerm
+          in: query
+          description: The search term for users
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: The page number for users
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: The limit number for users
+          required: false
+          schema:
+            type: integer
+            default: 5
       responses:
         "200":
           description: successful operation
@@ -266,7 +349,7 @@ paths:
     get:
       tags:
         - Account
-      summary: Logs out current logged in user session
+      summary: Logout current logged in user session
       description: ""
       operationId: logoutUser
       parameters: []
@@ -278,7 +361,7 @@ paths:
       tags:
         - User
       summary: Get user by username
-      description: ""
+      description: Returns an user
       operationId: getUserByName
       parameters:
         - name: username
@@ -302,7 +385,7 @@ paths:
       tags:
         - User
       summary: Update user by username
-      description: This can only be done by the logged in user.
+      description: Update an existing user by username
       operationId: updateUser
       parameters:
         - name: username
@@ -334,10 +417,10 @@ paths:
                   example: ""
                 phoneNumber:
                   type: string
-                  example: "12345"
+                  example: 0907778777
                 address:
                   type: string
-                  example: "Thành phố HCM"
+                  example: Thành phố HCM
                 status:
                   type: string
                   example: "Active"
@@ -355,7 +438,7 @@ paths:
       tags:
         - User
       summary: Delete user by username
-      description: This can only be done by the logged in user.
+      description: Delete an existing user by username
       operationId: deleteUser
       parameters:
         - name: username
@@ -373,7 +456,7 @@ paths:
           description: Invalid username supplied
         "404":
           description: User not found
-  /api/category:
+  /api/category/all:
     get:
       tags:
         - Category
@@ -388,7 +471,69 @@ paths:
               schema:
                 $ref: "#/components/schemas/Category"
         "400":
-          description: Invalid ID supplied
+          description: Invalid name supplied
+        "404":
+          description: Category not found
+  /api/category:
+    post:
+      tags:
+        - Category
+      summary: Create a new Category
+      description: create a new Category
+      operationId: createCategory
+      requestBody:
+        description: Create a new category
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+      responses:
+        "201":
+          description: Create category success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+    get:
+      tags:
+        - Category
+      summary: Get all Categories with searchTerm and paging
+      description: Returns a list of categories
+      operationId: getAllCategories
+      parameters:
+        - name: searchTerm
+          in: query
+          description: The search term for categories
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: The page number for categories
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: The limit number for categories
+          required: false
+          schema:
+            type: integer
+            default: 5
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Invalid name supplied
         "404":
           description: Category not found
   /api/category/{categoryName}:
@@ -416,29 +561,6 @@ paths:
           description: Invalid category supplied
         "404":
           description: Category not found
-    post:
-      tags:
-        - Category
-      summary: Create a new Category
-      description: create a new Category
-      operationId: createCategory
-      requestBody:
-        description: Create a new category
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Category"
-      responses:
-        "201":
-          description: Create category success
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Category"
-        "400":
-          description: Invalid input
-        "422":
-          description: Validation exception
     put:
       tags:
         - Category
@@ -494,6 +616,222 @@ paths:
           description: Category not found
         "400":
           description: Invalid category supplies
+  /api/order/all:
+    get:
+      tags:
+        - Order
+      summary: Get all Orders
+      description: Returns a list of orders
+      operationId: getAllOrders
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+        "400":
+          description: Invalid Id supplied
+        "404":
+          description: Order not found
+  /api/order:
+    post:
+      tags:
+        - Order
+      summary: Add a new Order
+      description: create a new Order
+      operationId: createOrder
+      requestBody:
+        description: Create a new order
+        content:
+          application/json:
+            schema:
+              required:
+                - orderId
+                - username
+                - Items
+              type: object
+              properties:
+                orderId:
+                  type: string
+                  example: 1
+                username:
+                  type: string
+                  example: Tiến Tài
+                orderDate:
+                  type: string
+                  example: ""
+                items:
+                  type: object
+                  properties:
+                    itemName:
+                      type: string
+                      default: Gà Rán
+                    quantity:
+                      type: integer
+                      default: 1
+                total:
+                  type: integer
+                  default: 0
+        required: true
+      responses:
+        "201":
+          description: Create order success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+    get:
+      tags:
+        - Order
+      summary: Get all Orders with searchTerm and paging
+      description: Returns a list of orders
+      operationId: getAllOrdersWithPaging
+      parameters:
+        - name: searchTerm
+          in: query
+          description: The search term for orders
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: The page number for orders
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          description: The limit number for orders
+          required: false
+          schema:
+            type: integer
+            default: 5
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+        "400":
+          description: Invalid Id supplied
+        "404":
+          description: Order not found
+  /api/order/{orderId}:
+    get:
+      tags:
+        - Order
+      summary: Get Order by Id
+      description: Returns an order
+      operationId: getOrderById
+      parameters:
+        - name: orderId
+          in: path
+          description: Id of an Order
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+        "400":
+          description: Invalid Id supplied
+        "404":
+          description: Order not found
+    put:
+      tags:
+        - Order
+      summary: Update an existing Order
+      description: Update an existing Order by Id
+      operationId: updateOrderById
+      parameters:
+        - name: orderId
+          in: path
+          description: Id of an Order
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Update an existent Order
+        content:
+          application/json:
+            schema:
+              required:
+                - username
+                - Items
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: Tiến Tài
+                orderDate:
+                  type: string
+                  example: ""
+                items:
+                  type: object
+                  properties:
+                    itemName:
+                      type: string
+                      default: Gà Rán
+                    quantity:
+                      type: integer
+                      default: 1
+                total:
+                  type: integer
+                  default: 0
+                status:
+                  type: string
+                  description: Order Status
+                  example: Success
+                  enum:
+                    - Success
+                    - Cancel
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+        "400":
+          description: Invalid Id supplied
+        "404":
+          description: Order not found
+        "422":
+          description: Validation exception
+    delete:
+      tags:
+        - Order
+      summary: Deletes an Order
+      description: delete an Order by Id
+      operationId: deleteOrder
+      parameters:
+        - name: orderId
+          in: path
+          description: Id of an Order
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+        "204":
+          description: Delete order success
+        "400":
+          description: Invalid ID supplies
+        "404":
+          description: Order not found
   /api/hello:
     get:
       summary: test API
@@ -505,19 +843,26 @@ components:
     Order:
       type: object
       properties:
+        orderId:
+          type: string
+          example: 1
         username:
           type: string
-          example: Steve
-        oderDate:
-          type: string
-          example: "01-01-2024"
+          example: Tiến Tài
+        orderDate:
+          type: date
+          example: 01/01/2024
         Items:
           type: object
           properties:
             itemName:
               type: string
-            quantiy:
+              default: Gà Rán
+            quantity:
               type: integer
+              default: 1
+        total:
+          type: integer
         status:
           type: string
           description: Order Status
@@ -584,6 +929,7 @@ components:
             example: "Món ăn kèm"
         itemUrl:
           type: string
+          default: ""
         description:
           type: string
           example: "Mô tả món ăn"
